<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txt_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/main_title"
        android:textColor="@color/blue_grey_500"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btn_spotify"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txt_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="43dp"
        android:background="@color/orange_udacity"
        android:onClick="onClickSpotify"
        android:padding="12dp"
        android:text="@string/spotify_streamer"
        android:textColor="@color/text_white" />

    <Button
        android:id="@+id/btn_scores"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_spotify"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@color/orange_udacity"
        android:onClick="onClickScores"
        android:padding="12dp"
        android:text="@string/super_duo_scores"
        android:textColor="@color/text_white" />


    <Button
        android:id="@+id/btn_library"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_scores"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@color/orange_udacity"
        android:onClick="onClickLibrary"
        android:padding="12dp"
        android:text="@string/super_duo_library"
        android:textColor="@color/text_white" />

    <Button
        android:id="@+id/btn_build_it_bigger"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_library"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@color/orange_udacity"
        android:onClick="onClickBigger"
        android:padding="12dp"
        android:text="@string/build_it_bigger"
        android:textColor="@color/text_white" />

    <Button
        android:id="@+id/btn_reader"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_build_it_bigger"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@color/orange_udacity"
        android:onClick="onClickReader"
        android:padding="12dp"
        android:text="@string/xyz_reader"
        android:textColor="@color/text_white" />

    <Button
        android:id="@+id/button6"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_reader"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="@color/red_500"
        android:onClick="onClickCapstone"
        android:padding="12dp"
        android:text="@string/capstone"
        android:textColor="@color/text_white" />

</RelativeLayout>
